# Customer-churn-prediction

./: .env.example  .gitignore  Dockerfile  MLproject  Makefile  README.md  conda.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  start_pipeline.py
app/backend/: Dockerfile  churn_predictor.py
app/frontend/: Dockerfile  streamlit_app.py
docker/: docker-compose.yaml
docker/nginx/: minio.conf  nginx.conf
models/: best_churn_model.joblib
notebooks/: 01_EDA.ipynb  02_Modeling.ipynb
pipeline/: data_preprocessing.py  model_training.py
scripts/: churn_predictor.py
